--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: scheduleassist_${{ matrix.platform }}
-          path: build/scheduleassist_${{ matrix.platform%/* }}_${{ matrix.platform#*/ }}.tar.gz
+          name: scheduleassist
+          path: build/**.tar.gz
 
   release:
     if: startsWith(github.ref, 'refs/tags/')
@@ -57,6 +57,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/scheduleassist_*.tar.gz
-          asset_name: scheduleassist_${{ matrix.platform }}.tar.gz
+          asset_path: build/**.tar.gz
+          asset_name: scheduleassist_${{ matrix.platform.replace('/', '_') }}.tar.gz
           asset_content_type: application/gzip
