--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: scheduleassist
-          path: build/**.tar.gz
+          path: build/*.tar.gz
 
   release:
     if: startsWith(github.ref, 'refs/tags/')
