--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          name: "Release ${{ github.ref }}"
+          name: "Release ${{ github.ref_name }}"
           files: dist/*
           generate_release_notes: true
         env:
